# cpp-examples

./: .gitignore  LICENSE
google-test/: CMakeLists.txt  build.bat  main.cpp  simple-test.cpp
turkish-locale/: CMakeLists.txt  main.cpp
